--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "node-fetch": "^3.3.2",
-    "openai": "^4.64.0"
+    "openai": "^4.64.0",
+    "uuid": "^10.0.0"
   }
 }
